--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,17 @@
     "short_name": "PWA Sample",
     "icons": [
         {
-            "src": "/icons/android-chrome-192x192.png",
+            "src": "./icons/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icons/android-chrome-512x512.png",
+            "src": "./icons/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "/icons/apple-touch-icon.png",
+            "src": "./icons/apple-touch-icon.png",
             "sizes": "180x180",
             "type": "image/png"
         }
